# tp-201

./: .gitignore  Cargo.toml  README.md  aliases.sh
exercises/: Cargo.toml  aliases.sh
kvs/: Cargo.toml  aliases.sh
kvs/src/: alt.rs  app.rs  compaction.rs  lib.rs  serialization.rs  server.rs
kvs/src/client/: client.rs  config.rs  mod.rs
kvs/src/engine/: mod.rs
kvs/src/protocol/: format.rs  mod.rs  request.rs  response.rs
kvs/src/server/: config.rs  handler.rs  mod.rs  server.rs
kvs/src/store/: command.rs  compaction.rs  index.rs  mod.rs
kvs/tests/: cli.rs  tests.rs
src/: command.rs  compaction.rs  index.rs  lib.rs
