[package]
name = "kvs"
version = "0.0.1"
authors = ["Kafji <k@kafji.net>"]
edition = "2018"

[dependencies]
bincode = "1.3"
clap = "3.0.0-beta.1"
dotenv_codegen = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.1"
walkdir = "2.2.7"
