[package]
name = "kvs"
version = "0.0.1"
authors = ["Kafji <k@kafji.net>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
backtrace = "0.3"
bincode = "1.3"
clap = "3.0.0-beta"
derive_builder = "0.9"
nix = "0.19"
num-traits = "0.2"
num-derive = "0.3"
once_cell = "1.4"
slog = "2.5"
slog-async = "2.5"
slog-term = "2.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"
static_assertions = "1.1"
tempfile = "3.1"
walkdir = "2.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"
